; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_cache.c_git_cached_obj_decref.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_cache.c_git_cached_obj_decref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @git_cached_obj_decref(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_2__*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %5, %struct.TYPE_2__** %3, align 8
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = call i64 @git_atomic_dec(i32* %7)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  switch i32 %13, label %20 [
    i32 128, label %14
    i32 129, label %17
  ]

14:                                               ; preds = %10
  %15 = load i8*, i8** %2, align 8
  %16 = call i32 @git_odb_object__free(i8* %15)
  br label %23

17:                                               ; preds = %10
  %18 = load i8*, i8** %2, align 8
  %19 = call i32 @git_object__free(i8* %18)
  br label %23

20:                                               ; preds = %10
  %21 = load i8*, i8** %2, align 8
  %22 = call i32 @git__free(i8* %21)
  br label %23

23:                                               ; preds = %20, %17, %14
  br label %24

24:                                               ; preds = %23, %1
  ret void
}

declare dso_local i64 @git_atomic_dec(i32*) #1

declare dso_local i32 @git_odb_object__free(i8*) #1

declare dso_local i32 @git_object__free(i8*) #1

declare dso_local i32 @git__free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
